--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
     </head>
     <body>
         <h1>Adil Sheikh</h1>
-        <img src="./assets/images/resume_photo.jpg" height="150" alt="resume profile photo">
-        <h2>Summary</h2>
-        <p>A dedicated individual with 1.5+ years of experience as an Analyst providing technical support to a retail business by managing their EDI application and all their business transactions through EDI and now moving towards the path of development. A self learning web developer using online courses to upskill and get more opportunities to become a developer.</p>
+        <!-- <img src="./assets/images/resume_photo.jpg" height="150" alt="resume profile photo"> -->
+        <h2>Brief</h2>
+        <p>A dedicated individual with 2+ years of experience as an Analyst providing technical support to a retail business by managing their EDI application and all their business transactions through EDI and now moving towards the path of development. A self taught developer always looking to upskill and get more opportunities to become a successful developer.</p>
         <hr>
         <h2>Education</h2>
         <ul>
             <li>Bachelor of Technology, Computer Science and Engineering - Amity University, Noida, Uttar Pradesh, India (2018-2022)</li>
+        </ul>
+        <hr>
+        <h2>Personal Projects</h2>
+        <ul>
+            <li>
+                <h3>Weather-Time</h3>
+                <p>Provides the user with the weather forecast using public API as per latitude and longitude. Made using express and axios with node.js. This project primarily focuses on using a public API and send HTTP requests to the API to retrieve weather information which is displayed to users in a user-friendly manner. Public API used - Open-Meteo. Github repository - <a href="https://github.com/adil-sheikh/weather-time" target="_blank">Link</a></p>
+            </li>
         </ul>
         <hr>
         <h2>Work Experience</h2>
@@ -31,28 +39,31 @@
         <hr>
         <h2>Skills and Competencies</h2>
         <ul>
-            <li>Working with teams</li>
-            <li>Leadership skills</li>
-            <li>HTML</li>
-            <li>EDI - IBM Sterling B2B Integrator</li>
-            <li>Basic Unix for traversing</li>
-            <li>More to add..</li>
+            <li>Frontend - HTML, CSS (Flexbox, Grid, Bootstrap), Javascript</li>
+            <li>DOM Manipulation/Event Handling - Javascript and jQuery</li>
+            <li>Backend - Express.js with Node.js for Server & Routing, EJS for Templating Language</li>
+            <li>API - Axios with Node.js for handling HTTP Requests & Responses for public/private API</li>
+            <li>Database - PostgreSQL</li>
+            <li>Version Control - Git & Github, Basic Unix for traversing</li>
+            <li>Problem Solving - Data Structure, Attention to details, Critical Thinking, Time Management</li>
+            <li>Others - Communication, Teamwork, Accountability, EDI - Sterling B2B Integrator</li>
         </ul>
         <hr>
         <h2>Awards and Recognitions</h2>
         <ul>
-            <li>DXC Champs Award FY23 Q4 for Delivery and Excellence - <a href="./assets/documents/Champs Award_FY23_Q4.pdf">Certificate</a></li>
-            <li>DXC Champs Award FY24 Q3 for Delivery and Excellence - <a href="./assets/documents/Champs Award_FY24_Q3.pdf">Certificate</a></li>
-            <li>DXC Recognition Awards for Delivery by On-site lead - <a href="./assets/documents/Award_Sapphire_23-03-2023.pdf">Certificate</a></li>
-            <li>DXC Recognition Awards for Excellence in Service Delivery by Project Manager - <a href="./assets/documents/Award_Emerald_12-04-2023.pdf">Certificate</a></li>
-            <li>DXC Recognition Awards for EDI Operations by Director of Account - <a href="./assets/documents/Award_Emerald_05-05-2023.pdf">Certificate</a></li>
+            <li>DXC Champs Award FY23 Q4 for Delivery and Excellence - <a href="./assets/documents/Champs Award_FY23_Q4.pdf" target="_blank">Certificate</a></li>
+            <li>DXC Champs Award FY24 Q3 for Delivery and Excellence - <a href="./assets/documents/Champs Award_FY24_Q3.pdf" target="_blank">Certificate</a></li>
+            <li>DXC Recognition Award for Delivery by On-site lead - <a href="./assets/documents/Award_Sapphire_23-03-2023.pdf" target="_blank">Certificate</a></li>
+            <li>DXC Recognition Award for Excellence in Service Delivery by Project Manager - <a href="./assets/documents/Award_Emerald_12-04-2023.pdf" target="_blank">Certificate</a></li>
+            <li>DXC Recognition Award for EDI Operations by Director of Account - <a href="./assets/documents/Award_Emerald_05-05-2023.pdf" target="_blank">Certificate</a></li>
+            <li>DXC Recognition Award for Exceptional Contribution by Application Management Head - <a href="./assets/documents/Award_Diamond_31-10-2024.pdf" target="_blank">Certificate</a></li>
         </ul>
         <hr>
-        <h2>Other</h2>
+        <h2>Contact Me</h2>
         <ul>
-            <li><a href="./public/hobbies.html">My Hobbies</a></li>
-            <li><a href="./public/contact.html">Contact Me</a></li>
+            <li><b>M</b> (+91) 971-758-4162</li>
+            <li><b>E</b> adilsheikh1492@gmail.com</li>
         </ul>
-        <footer>© Adil Sheikh - Last Updated - April 4th, 2024</footer>
+        <footer>© Adil Sheikh - Last Updated - December, 2024. Web Version - https://adil-sheikh.github.io/my-resume/</footer>
     </body>
 </html>
