--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li>Frontend - HTML, CSS (Flexbox, Grid, Bootstrap), Javascript</li>
             <li>DOM Manipulation/Event Handling - Javascript and jQuery</li>
             <li>Backend - Express.js with Node.js for Server & Routing, EJS for Templating Language</li>
-            <li>API - Axios with Node.js for handling HTTP Requests & Responses for public/private API</li>
+            <li>RESTful API - Axios with Node.js for handling HTTP Requests & Responses for public/private API</li>
             <li>Database - PostgreSQL</li>
             <li>Version Control - Git & Github, Basic Unix for traversing</li>
             <li>Problem Solving - Data Structure, Attention to details, Critical Thinking, Time Management</li>
