--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <title>My Resume</title>
+        <link href="./public/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Adil Sheikh</h1>
-        <!-- <img src="./assets/images/resume_photo.jpg" height="150" alt="resume profile photo"> -->
+        <div class="container">
+            <div id="title">
+                <h1>Adil Sheikh</h1><br>
+                <h2 id="designation">Analyst II Software Engineer</h2>
+                <!-- <img src="./assets/images/resume_photo.jpg" height="150" alt="resume profile photo"> -->
+            </div>
+            <div id="contact">
+                <p>(+91) 971-758-4162<br>
+                    adilsheikh1492@gmail.com<br>
+                    New Delhi, Delhi, India<br>
+                    <a href="https://www.linkedin.com/in/adil-sheikh-5379071b9" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                        <path fill="#0078d4" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5	V37z"></path><path d="M30,37V26.901c0-1.689-0.819-2.698-2.192-2.698c-0.815,0-1.414,0.459-1.779,1.364	c-0.017,0.064-0.041,0.325-0.031,1.114L26,37h-7V18h7v1.061C27.022,18.356,28.275,18,29.738,18c4.547,0,7.261,3.093,7.261,8.274	L37,37H30z M11,37V18h3.457C12.454,18,11,16.528,11,14.499C11,12.472,12.478,11,14.514,11c2.012,0,3.445,1.431,3.486,3.479	C18,16.523,16.521,18,14.485,18H18v19H11z" opacity=".05"></path><path d="M30.5,36.5v-9.599c0-1.973-1.031-3.198-2.692-3.198c-1.295,0-1.935,0.912-2.243,1.677	c-0.082,0.199-0.071,0.989-0.067,1.326L25.5,36.5h-6v-18h6v1.638c0.795-0.823,2.075-1.638,4.238-1.638	c4.233,0,6.761,2.906,6.761,7.774L36.5,36.5H30.5z M11.5,36.5v-18h6v18H11.5z M14.457,17.5c-1.713,0-2.957-1.262-2.957-3.001	c0-1.738,1.268-2.999,3.014-2.999c1.724,0,2.951,1.229,2.986,2.989c0,1.749-1.268,3.011-3.015,3.011H14.457z" opacity=".07"></path><path fill="#fff" d="M12,19h5v17h-5V19z M14.485,17h-0.028C12.965,17,12,15.888,12,14.499C12,13.08,12.995,12,14.514,12	c1.521,0,2.458,1.08,2.486,2.499C17,15.887,16.035,17,14.485,17z M36,36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698	c-1.501,0-2.313,1.012-2.707,1.99C24.957,25.543,25,26.511,25,27v9h-5V19h5v2.616C25.721,20.5,26.85,19,29.738,19	c3.578,0,6.261,2.25,6.261,7.274L36,36L36,36z"></path>
+                    </svg></a>
+                    <a href="https://github.com/adil-sheikh" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
+                        <path d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z"></path>
+                    </svg></a>
+                </p>
+            </div>
+        </div>
         <h2>Brief</h2>
-        <p>A dedicated individual with 2+ years of experience as an Analyst providing technical support to a retail business by managing their EDI application and all their business transactions through EDI and now moving towards the path of development. A self taught developer always looking to upskill and get more opportunities to become a successful developer.</p>
+        <p>A highly motivated and versatile professional specializing in Electronic Data Interchange (EDI) solutions, majorly in Sterling B2B Integrator. Adept at implementing, troubleshooting, and optimizing EDI systems for seamless data exchange. Possesses a strong understanding of frontend and backend development, with hands-on expertise in building and maintaining web applications and databases. Skilled in collaborating with cross-functional teams to deliver innovative solutions, ensuring system efficiency and data integrity. A quick learner with excellent problem-solving abilities, committed to driving operational excellence and continuous improvement.</p>
         <hr>
         <h2>Education</h2>
         <ul>
@@ -19,34 +37,66 @@
         <ul>
             <li>
                 <h3>Weather-Time</h3>
-                <p>Provides the user with the weather forecast using public API as per latitude and longitude. Made using express and axios with node.js. This project primarily focuses on using a public API and send HTTP requests to the API to retrieve weather information which is displayed to users in a user-friendly manner. Public API used - Open-Meteo. Github repository - <a href="https://github.com/adil-sheikh/weather-time" target="_blank">Link</a></p>
+                <ul>
+                    <li>Provides the user with the weather forecast using public API as per latitude and longitude.</li>
+                    <li>Server and routing setup using express with node.js. Server to server API HTTP requests and responses handled using axios in the backend.</li>
+                    <li>Dynamic frontend using EJS and simple design using CSS.</li>
+                    <li>Primarily focuses on using a public API and send HTTP requests to the API to retrieve weather information which is displayed to users in a user-friendly manner.</li>
+                    <li>Public API used - Open-Meteo.</li>
+                    <li><a href="https://github.com/adil-sheikh/weather-time" target="_blank">Github repository</a></li>
+                </ul>
+            </li>
+            <li>
+                <h3>BlogMaker</h3>
+                <ul>
+                    <li>A blog site which allows users to create a post and ability to view all their posts, edit and delete exisiting posts.</li>
+                    <li>Server and routing setup using express with node.js in the backend.</li>
+                    <li>Dynamic frontend using EJS and simple design using CSS.</li>
+                    <li>All the posts are stored in an array like structure in the backend and are rendered to frontend using flexbox.</li>
+                    <li><a href="https://github.com/adil-sheikh/blog-web-app" target="_blank">Github repository</a></li>
+                </ul>
             </li>
         </ul>
         <hr>
         <h2>Work Experience</h2>
         <ul>
             <li>
-                <h3>Analyst II Software Engineer - DXC Technologies</h3>
-                <p>June 2022 - Present</p>
+                <h3>Analyst II Software Engineer - DXC Technology</h3>
+                <p><b>June 2022 - Present</b></p>
                 <ul>
-                    <li>Maintained IBM Sterling B2B Integrator application and daily EDI transactions for the retail company - Ahold Delhaize USA.</li>
-                    <li>Effectively troubleshooted and resolved technical issues to ensure smooth transmissions to and from trading partners.</li>
-                    <li>Collaborated with different teams in multiple instances to resolve critical issues to avoid business impact.</li>
-                    <li>Have done application maintenances and documentation and provided knowledge transfers to other team members.</li>
+                    <li>Maintain IBM Sterling B2B Integrator application and daily EDI transactions for the retail company - Ahold Delhaize USA.</li>
+                    <li>Experience in analyzing, designing, developing, supporting, maintaining, coding and testing mapping components for B2B integration using EDI and IBM Sterling B2B Integrator.</li>
+                    <li>Effectively troubleshoot and resolve technical issues to ensure smooth inbound and outbound transmissions for more than 300 trading partners.</li>
+                    <li>Collaborate with different integration teams and develope tailored EDI solutions to resolve critical issues in multiple instances avoiding impact to business by 80%.</li>
+                    <li>Manage end-to-end EDI processes for diverse clients, ensuring seamless integration and transmission of electronic data.</li>
+                    <li>Monitor EDI transactions, troubleshoot issues, ensuring data accuracy and compliance with industry standards such as ANSI X12.</li>
+                    <li>Handle translation errors, email queries from client/customer, resolve incidents within defined SLA and mitigated multiple reoccuring issues decreasing manual work by 50%.</li>
+                    <li>Had been named SME and emergency point of contact in time of need by Account Director by showing leadership approach to problem-solving increasing productivity by 20%.</li>
+                    <li>Work across Development, Test and Production environments.</li>
+                    <li>Experience with file protocols such as AS2, FTP/SFTP and HTTP/HTTPS and security certificates for SSL, signing and encryption.</li>
+                    <li>Strong understanding of industry standard ANSI X12 file formats like 850, 855, 856, 810, 875, 880, 997 and JSON, XML and flat/application files.</li>
+                    <li>Excellent grip on Unix command line tools like Putty to traverse, perform different search operations and executing scripts, also GUI tools like FileZilla and WinSCP.</li>
+                    <li>Interact with database using SQL for searching required Purchase Orders and Invoices plus updating data including but not limited to directly acknowledging files from database and monitor processes usage and speed ensuring system stability.</li>
+                    <li>Detected and fixed a setup issue across multiple trading partners by collaborating with onboarding team resulting in a 20% increase in efficiency and preventing 20% business process failures.</li>
+                    <li>Helped team members countless times during SMT and critical issues, and by documenting different approaches for problem solving and delivered sessions to team members increasing 30% productivity of the whole team.</li>
+                    <li>Widely contributed to the Support Runbook and System Appreciation Document (SAD) of EDI increasing 30% efficiency in the troubleshooting and problem solving steps.</li>
+                    <li>Successfully switched AS2 system security and encryption certificate for more than 300 partners preventing over 50% AS2 transmission failures.</li>
+                    <li>Identified major problem with testing between App Connect Enterprise and Sterting B2B Integrator through MQ. Developed the required change in the MQ configuration steps in the business process ensuring faster process times through MQ increasing effectiveness and speed by upto 40% and also preventing the delay in the production go-live avoiding business impact by 20%.</li>
+                    <li>Participated and made urgent changes to the system during a major Mainframe system migration preventing 90% of EDI system failures and ensuring a smooth transition.</li>
                 </ul>
             </li>
         </ul>
         <hr>
         <h2>Skills and Competencies</h2>
         <ul>
-            <li>Frontend - HTML, CSS (Flexbox, Grid, Bootstrap), Javascript</li>
-            <li>DOM Manipulation/Event Handling - Javascript and jQuery</li>
-            <li>Backend - Express.js with Node.js for Server & Routing, EJS for Templating Language</li>
+            <li>Web Technologies Frontend - HTML, CSS (Flexbox, Grid, Bootstrap), Javascript</li>
+            <li>DOM Manipulation and Event Handling - Javascript and jQuery</li>
+            <li>Web Technologies Backend - Express.js with Node.js for Server & Routing, EJS for Templating Language</li>
             <li>RESTful API - Axios with Node.js for handling HTTP Requests & Responses for public/private API</li>
-            <li>Database - PostgreSQL</li>
-            <li>Version Control - Git & Github, Basic Unix for traversing</li>
-            <li>Problem Solving - Data Structure, Attention to details, Critical Thinking, Time Management</li>
-            <li>Others - Communication, Teamwork, Accountability, EDI - Sterling B2B Integrator</li>
+            <li>DBMS - SQL, PostgreSQL</li>
+            <li>Version Control - Git & Github, Unix for traversing and different commands and operations</li>
+            <li>Problem Solving - Data Structures and Algorithms, OOPS, Attention to details, Critical Thinking, Time Management</li>
+            <li>Tools & Technologies - EDI, IBM Sterling B2B Integrator, Visual Studio Code, pgAdmin for PostgreSQL</li>
         </ul>
         <hr>
         <h2>Awards and Recognitions</h2>
@@ -59,11 +109,24 @@
             <li>DXC Recognition Award for Exceptional Contribution by Application Management Head - <a href="./assets/documents/Award_Diamond_31-10-2024.pdf" target="_blank">Certificate</a></li>
         </ul>
         <hr>
-        <h2>Contact Me</h2>
+        <h2>About Me</h2>
         <ul>
-            <li><b>M</b> (+91) 971-758-4162</li>
-            <li><b>E</b> adilsheikh1492@gmail.com</li>
+            <li><h3>Key Strengths</h3></li>
+            <ul>
+                <li>Excellent Verbal and Written Communication</li>
+                <li>Leadership, Teamwork and Collaborative</li>
+                <li>Strong Analytical and Problem Solving Skills</li>
+                <li>Flexibility and Smart Working Mindset</li>
+                <li>Quick Learner and Adaptability to Change</li>
+                <li>Proactive and Accountability</li>
+            </ul>
+            <li><h3>Always ready for</h3></li>
+            <ul>
+                <li>Gaming</li>
+                <li>Upskilling</li>
+                <li>Outings and meetup</li>
+            </ul>
         </ul>
-        <footer>© Adil Sheikh - Last Updated - December, 2024. Web Version - https://adil-sheikh.github.io/my-resume/</footer>
+        <footer>© Adil Sheikh - Last Updated - January, 2025. Web Version - https://adil-sheikh.github.io/my-resume/</footer>
     </body>
 </html>
