--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div id="title">
                 <h1>Adil Sheikh</h1><br>
-                <h2 id="designation">Analyst II Software Engineer</h2>
+                <!-- <h2 id="designation">Analyst II Software Engineer</h2> -->
                 <!-- <img src="./assets/images/resume_photo.jpg" height="150" alt="resume profile photo"> -->
             </div>
             <div id="contact">
@@ -26,7 +26,7 @@
             </div>
         </div>
         <h2>Brief</h2>
-        <p>A highly motivated and versatile professional specializing in Electronic Data Interchange (EDI) solutions, majorly in Sterling B2B Integrator. Adept at implementing, troubleshooting, and optimizing EDI systems for seamless data exchange. Possesses a strong understanding of frontend and backend development, with hands-on expertise in building and maintaining web applications and databases. Skilled in collaborating with cross-functional teams to deliver innovative solutions, ensuring system efficiency and data integrity. A quick learner with excellent problem-solving abilities, committed to driving operational excellence and continuous improvement.</p>
+        <p id="intro">A highly motivated and versatile professional specializing in Electronic Data Interchange (EDI) solutions. Adept at implementing, troubleshooting, and optimizing EDI systems for seamless data exchange. Possesses a strong understanding of frontend and backend development, with hands-on expertise in building and maintaining web applications and databases. Skilled in collaborating with cross-functional teams to deliver innovative solutions, ensuring system efficiency and data integrity. A quick learner with excellent problem-solving abilities, committed to driving operational excellence and continuous improvement. Always open to new development opportunities to broaden my horizon.</p>
         <hr>
         <h2>Education</h2>
         <ul>
