--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <li>Work across Development, Test and Production environments.</li>
                     <li>Experience with file protocols such as AS2, FTP/SFTP and HTTP/HTTPS and security certificates for SSL, signing and encryption.</li>
                     <li>Strong understanding of industry standard ANSI X12 file formats like 850, 855, 856, 810, 875, 880, 997 and JSON, XML and flat/application files.</li>
-                    <li>Excellent grip on Unix command line tools like Putty to traverse, perform different search operations and executing scripts, also GUI tools like FileZilla and WinSCP.</li>
+                    <li>Excellent grip on Unix command line tools like Putty to traverse, perform different search operations, creating and executing shell scripts, also GUI tools like FileZilla and WinSCP.</li>
                     <li>Interact with database using SQL for searching required Purchase Orders and Invoices plus updating data including but not limited to directly acknowledging files from database and monitor processes usage and speed ensuring system stability.</li>
                     <li>Detected and fixed a setup issue across multiple trading partners by collaborating with onboarding team resulting in a 20% increase in efficiency and preventing 20% business process failures.</li>
                     <li>Helped team members countless times during SMT and critical issues, and by documenting different approaches for problem solving and delivered sessions to team members increasing 30% productivity of the whole team.</li>
@@ -95,8 +95,8 @@
             <li>RESTful API - Axios with Node.js for handling HTTP Requests & Responses for public/private API</li>
             <li>DBMS - SQL, PostgreSQL</li>
             <li>Version Control - Git & Github, Unix for traversing and different commands and operations</li>
-            <li>Problem Solving - Data Structures and Algorithms, OOPS, Attention to details, Critical Thinking, Time Management</li>
-            <li>Tools & Technologies - EDI, IBM Sterling B2B Integrator, Visual Studio Code, pgAdmin for PostgreSQL</li>
+            <li>Problem Solving - Data Structures and Algorithms, OOPS, Shell Scripting, Attention to detail, Critical Thinking, Time Management</li>
+            <li>Tools & Technologies - Java, Eclipse, EDI, IBM Sterling B2B Integrator, Visual Studio Code, pgAdmin for PostgreSQL</li>
         </ul>
         <hr>
         <h2>Awards and Recognitions</h2>
@@ -127,6 +127,6 @@
                 <li>Outings and meetup</li>
             </ul>
         </ul>
-        <footer>© Adil Sheikh - Last Updated - January, 2025. Web Version - https://adil-sheikh.github.io/my-resume/</footer>
+        <footer>© Adil Sheikh - Last Updated - February, 2025. Web Version - https://adil-sheikh.github.io/my-resume/</footer>
     </body>
 </html>
